# canyoncodecore

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/agents/: finance_agent.py  finance_agent.yaml  market_agent.py  market_agent.yaml  vllm_agent.py
examples/config/: global_controller.ec2_smoke.yaml  global_controller.yaml
examples/policies/: finance.py
examples/workflows/: example_workflow.py
sandbox/localstack_ssm/: .env.example  .gitignore  README.md  docker-compose.yml
tests/: README.md  run_ec2_e2e.sh  run_ec2_remote_smoke.sh  run_tests.sh  test_agent_id_stickiness.py  test_callback_e2e.py  test_cli.py  test_cli_build.py  test_cli_deploy.py  test_ec2_e2e.py  test_error_propagation.py  test_instance_manager_runtime.py  test_integration.py  test_output_policy.py  test_performance.py  test_redis_utils.py  test_reverse_agent.py  test_runtime_ec2.py  test_runtime_manager.py  test_runtime_sqlalchemy.py  test_stateful_affinity.py
tests/global_controller/: test_runtime_backed_controller.py
tests/live/: test_full_local_deploy.py  test_local_docker_runtime.py
tests/local/: test_port_allocation.py  test_queue_depth_publication.py
tests/routing/: test_routing_publication.py
tests/runtime/: test_runtime_lifecycle.py
tests/support/: runtime_fakes.py
ventis/: cli.py  config_loader.py  deploy.py  future.py  request_priority.py  stub_generator.py  ventis_context.py
ventis/controller/: agent_spec_loader.py  global_controller.py  instance_manager.py  local_controller.py  runtime_manager.py  (+1 more)
(+57 files in other folders)
